<resources>
    <string name="app_name">ecom</string>
    <string name="desc1">Discover a world of online treasures,Shop with ease and endless pleasures,Embrace the convenience that knows no measures!</string>
    <string name="desc2">From fashion to tech, we have it all,Browse, compare, and answer your every call,Experience e-commerce, where shopping is a ball!</string>
    <string name="desc3">No more limits, no boundaries to roam,With e-commerce, bring the world to your home,Discover, shop, and make it your own!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="slide1_title">Simplify your shopping experience.</string>
    <string name="slide2_title">Say goodbye to long checkout lines.</string>
    <string name="slide3_title">Experience the future of grocery shopping!</string>


    <string name="slide1_desc">Make your shopping a breeze with our app, streamlining every step from creating lists to easy checkout, ensuring a hassle-free experience. Simplify your grocery shopping and save time for what truly matters.</string>
    <string name="slide2_desc">Wave goodbye to waiting in long checkout lines with our app, offering quick and seamless payment options that eliminate the hassle and save you precious time. Enjoy a stress-free shopping experience from start to finish.</string>
    <string name="slide3_desc">Step into the future of grocery shopping with our app, where cutting-edge technology and convenience converge to revolutionize how you shop for essentials!</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest User</string>
    <string name="nav_header_subtitle">03xx xxxxxxx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">My Orders</string>
    <string name="menu_wishlist">My WishList</string>
    <string name="menu_languages">Languages</string>
    <string name="menu_account">Account Settings</string>
    <string name="menu_changePassword">Change Password</string>
    <string name="menu_help">Help Center</string>
    <string name="menu_rating">Rate Us on Play Store</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_maps">Maps</string>
    <string name="enter_your_name">Enter Your Name</string>

</resources>
