<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/baseline_shopping_cart_checkout_24"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_wishList"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/menu_wishlist" />
        <item
            android:id="@+id/nav_languages"
            android:icon="@drawable/baseline_language_24"
            android:title="@string/menu_languages" />
        <item
            android:id="@+id/nav_accountSettings"
            android:icon="@drawable/baseline_manage_accounts_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_changePassword"
            android:icon="@drawable/baseline_password_24"
            android:title="@string/menu_changePassword" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_live_help_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_ratting"
            android:icon="@drawable/ratting_24"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
             android:title="@string/menu_logout" />


    </group>
</menu>